<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mensajeBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="48dp"
        android:text="@string/mensajeBienvenida"
        android:textColor="@color/mi_default"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonIngreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="44dp"
        android:onClick="logueo"
        android:text="@string/botonIngreso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseña" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginBottom="64dp"
        android:text="@string/mensajeIngreso"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mensajeBienvenida"
        app:layout_constraintVertical_bias="0.439" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="272dp"
        android:layout_height="45dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contraseña"
        android:layout_width="272dp"
        android:layout_height="43dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario" />

    <Button
        android:id="@+id/botonActivityRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="144dp"
        android:onClick="iniciarActivityRegistro"
        android:text="@string/botonRegistro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseña" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="225dp"
        android:layout_height="37dp"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="172dp"
        android:text="@string/mensajeIngreso2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>